...

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="810dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="Scrollbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile_editProfileBtn" />

            <View
...
                android:layout_marginEnd="10dp"
                android:backgroundTint="#6200ED"
                android:contentDescription="Edit Profile Button"
                android:scaleType="fitCenter"
                android:src="@drawable/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_profilePictureView"
                app:tint="#FFFFFF" />

...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_statisticsTitle" />

            <TextView
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_goalsGameTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Goals Per Game"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_gamesPlayedTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Games Played"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_assistsTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Assists"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_goalsTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Goals"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_PositionTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Preferred Position"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="Statistics"
                android:textColor="#000000"
                android:textSize="24sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_characteristicsTitle" />

            <TextView
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_birthdayTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Birthday"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_weightTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Weight"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_heightTitle" />

            <TextView
...
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="Height"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="Characteristics"
                android:textColor="#000000"
                android:textSize="24sp"
...

            <TextView
                android:id="@+id/profile_usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/profile_profilePictureView"
                app:layout_constraintTop_toBottomOf="@+id/profile_fullnameText" />

            <TextView
...
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Profile Page Button"
        android:scaleType="fitCenter"
        app:tint="#6558F5"
...
